<resources>
    <string name="app_name">Contact Tracker</string>

    <!-- Strings genéricos -->
    <string name="apply">Aplicar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="minutes">Minutos</string>
    <string name="seconds">Segundos</string>
    <string name="meters">Metros</string>
    <string name="lat">Latitud</string>
    <string name="lng">Longitud</string>
...

    <!-- Preferences: Notificaciones de positivos -->
    <string name="shared_prefs_positives_notifications">PositivesNotifications</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_menu_item_1">Rastreador</string>
    <string name="bottom_menu_item_2">Positivo</string>
    <string name="bottom_menu_item_3">Contactos</string>
    <string name="bottom_menu_item_4">Histórico</string>


    <!-- Default Blank Fragment -->
    <string name="default_blank_fragment">DEFAULT BLANK FRAGMENT</string>
...
    <string name="notifyAPositive">Notificar un positivo</string>
    <string name="genericErrorNotifyPositive">Ha habido un error al notificar el positivo. No ha sido posible subir las localizaciones a la nube.</string>
    <string name="notifyExplanation1">Registra que has dado positivo en la aplicación para que tus localizaciones registradas en los últimos días se suban a la nube.</string>
    <string name="notifyExplanation2">Opcionalmente puedes adjuntar tus datos personales, los cuales quedarán asociados a tus localizaciones. De este modo, contribuyes a facilitar las tareas de rastreo realizadas por el personal sanitario.</string>
    <string name="notifyExplanation3">Tus datos personales están protegidos de acuerdo con nuestra política de privacidad.</string>
    <string name="notifyExplanation4">Se subirán a la nube todas tus localizaciones registradas en los últimos:</string>
    <string name="btnNotifyPositive">He dado positivo</string>
    <string name="addPersonalData">Adjuntar mis datos personales</string>
    <string name="loadingPlaceholderNotifyPositive">Subiendo tus localizaciones a la nube...</string>
    <string name="notifyPositiveResultText">Se han subido %d localizaciones a la nube.</string>
    <string name="errorNotifyLimitExceeded">Se ha superado el límite de notificación. No podrás notificar más positivos hasta pasados %d días.</string>
    <string name="errorNotifyNoLocations">No se ha podido notificar el positivo: no existen localizaciones registradas en el periodo de infectividad. Activa el servicio de rastreo para registrar localizaciones.</string>
    <string name="seePrivacyPolicy">Consulta nuestra</string>

...
