...
            android:text="@string/notifyExplanation2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView1"/>

        <CheckBox
            android:id="@+id/checkBoxAddPersonalData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:checked="false"
            android:text="@string/addPersonalData"
            app:layout_constraintEnd_toEndOf="parent"
...
                app:indicatorColor="@android:color/holo_red_dark"
                app:visibility="@{viewModel.loadingInfectivity}" />
        </LinearLayout>

        <!-- Botón para notificar el Positivo -->
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
